# jugend-forscht-receiver

./: .gitignore  Cargo.toml  LICENSE  PROTOCOL.md
.github/workflows/: macOS-build.yml  run-tests.yml  windows-build.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: read_next_package.rs
package-parser/: Cargo.toml
package-parser/src/: lib.rs  spoofed_data.rs  tests.rs
receiver-lib/: Cargo.toml
receiver-lib/src/: tests.rs
src/: main.rs  spoof_sensor.rs  wired_arduino.rs
